# MCP

./: .env.example  README.md  client.py  mcp_server.json  pyproject.toml  server.py  test.py
