[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "flask[async]>=3.1.0",
    "httpx>=0.28.1",
    "mcp>=1.4.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
